# au-taf

./: .gitignore  .gitmodules  README.md  project.json
code/: CMakeLists.txt  README.md
code/Common/: CMakeLists.txt
code/Common/Inc/: base.h  blocks.h  buffer.h  debug.h  i2c.h
code/Common/Src/: base.c  buffer.c  debug.c  i2c.c
code/Config/: stm32f429.cmake
code/Drivers/: CMakeLists.txt
code/Drivers/BSP/STM32F429I-Discovery/: stm32f429i_discovery_lcd.c  stm32f429i_discovery_lcd.h
code/Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
code/Json/: Makefile  config.json  json2params.py  overwrite_section.py
code/Middlewares/ST/STM32_Audio/: README.md
code/Projects/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/Applications/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/Applications/au-taf/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/Applications/au-taf/Bsp/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/Applications/au-taf/Bsp/STM32F429I-Discovery/: stm32f411e_discovery_audio.c  stm32f411e_discovery_audio.h
code/Projects/STM32F429I-Discovery/Applications/au-taf/Hal/: CMakeLists.txt
code/Projects/STM32F429I-Discovery/Applications/au-taf/Inc/: constant.h  main.h  pico.h  serial.h  stm32f429i_discovery_lcd.h
code/Projects/STM32F429I-Discovery/Applications/au-taf/Src/: api.py  gen.py  main.c  pico_multi.c  pv_st_f429.c  serial.c  stm32f4xx_it.c  system_stm32f4xx.c  user_config.s
code/config/: README.md  config.json  example_config.json  json2params.py  stm32f4.cmake  stm32f429_flash.ld
code/executable/: CMakeLists.txt  README.md
code/executable/Bsp/: CMakeLists.txt  stm32f411e_discovery.c  stm32f411e_discovery.h
code/executable/Bsp/STM32F429I-Discovery/: stm32f411e_discovery.c  stm32f411e_discovery.h  stm32f411e_discovery_audio.c  stm32f411e_discovery_audio.h
code/executable/Hal/: CMakeLists.txt
code/executable/Inc/: main.h  pico.h  picovoice.h  pv_audio_rec.h  pv_params_multi.h  pv_params_rhino.h  pv_picovoice.h  pv_porcupine_mcu.h  pv_st_f429.h  serial.h  stm32f4xx_hal_conf.h
code/executable/Src/: main.c  pico_multi.c  pico_rhino.c  pv_st_f429.c  serial.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
models/: bottom_box.py  bottom_box.scad  bowl_box.scad  profil_phone.scad  support_phone.scad  top_box.scad
