CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET( SUB_PROJECT_NAME stm32_common )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/Inc
    ${CONFIG_SOURCE_DIR}/Inc
)

SET(PROJECT_SOURCES
  Inc/buffer.h
  Inc/i2c.h
  Src/buffer.c
#  Src/i2c.c
)

ADD_LIBRARY( ${SUB_PROJECT_NAME} STATIC ${PROJECT_SOURCES} )

